--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/dbnavigationbarbackground"
+    android:layout_width="@dimen/nav_header_logo_width"
+    android:layout_height="@dimen/nav_header_logo_height"
+    android:background="@drawable/db_play_logo"
     android:orientation="vertical"
     android:gravity="bottom"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="user@host.com"
+        android:text="@string/nav_header_personal_welcome"
         android:id="@+id/email"
         android:gravity="left"
         android:textSize="14sp"
