--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,10 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="fragment_top_offset">70dp</dimen>
-    <dimen name="button_text_size">28sp</dimen>
+    <dimen name="button_text_size">18sp</dimen>
+    <dimen name="button_text_padding">20dp</dimen>
     <dimen name="content_text_size">15sp</dimen>
     <dimen name="title_text_size">28sp</dimen>
+    <dimen name="nav_header_logo_height">175dp</dimen>
+    <dimen name="nav_header_logo_width">175dp</dimen>
 </resources>
