--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,16 @@
         <item name="android:textColorPrimary">@color/colorPrimaryText</item>
         <item name="android:background">@color/colorSettingsMenuBackground</item>
     </style>
+    <style name="ScrollingScreen">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">@dimen/fragment_top_offset</item>
+        <item name="android:clickable">false</item>
+        <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/activity_vertical_margin</item>
+        <item name="android:paddingBottom">@dimen/activity_vertical_margin</item>
+    </style>
     <style name="title">
         <item name= "android:layout_width">wrap_content</item>
         <item name= "android:layout_height">wrap_content</item>
@@ -44,6 +54,7 @@
         <item name= "android:background">@color/colorButtonBackground</item>
         <item name= "android:textSize">@dimen/button_text_size</item>
         <item name= "android:layout_margin">@dimen/activity_margin</item>
+        <item name= "android:padding">@dimen/button_text_padding</item>
         <item name= "android:clickable">true</item>
     </style>
 
